test/cgip/PP/error/inheritance/rep/reperr-35.err105
"Line 38 column 12
210: Class name not is not within the current scope"
